<resources>
    <string name="app_name">LISTVIEW</string>
    <string name="opcion">OPERACIONES REALIZADAS</string>
    <string name="opciones">OPCIONES</string>
    <string name="areas">AREAS</string>
    <string name="volumenes">VOLÚMENES</string>
    <string name="no">No</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
    <string name="cuadrado">CUADRADO</string>
    <string name="valor_del_lado">Lado</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="triangulo">TRIÁNGULO</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="rectangulo">RECTÁNGULO</string>
    <string name="circulo">CÍRCULO</string>
    <string name="radio">Radio</string>
    <string name="cubo">CUBO</string>
    <string name="cono">CONO</string>
    <string name="radio_cono">Radio</string>
    <string name="altura_cono">Altura</string>
    <string name="radio_cubo">Radio</string>
    <string name="altura_cubo">Altura</string>
    <string name="esfera">ESFERA</string>
    <string name="radio_esfera">Radio</string>
    <string name="altura_esfera">Altura</string>
    <string name="cilindro">CILINDRO</string>
    <string name="radio_cilindro">Radio</string>
    <string name="altrura_cilindro">Altura</string>
    <string name="error_1">Ingrese los datos</string>
    <string name="error_2">Ingrese un numero mayor que cero</string>
    <string name="volumen_cl">Volumen del Cilindro </string>
    <string name="volumen_es">Volumen de la Esfera </string>
    <string name="volumen_cubo">Volumen del Cubo </string>
    <string name="volumen_cono">Volumen del Cono </string>
    <string name="area_cua">Area del Cuadrado </string>
    <string name="area_tri">Area del Triangulo </string>
    <string name="area_rec">Area del Rectángulo </string>
    <string name="area_cir">Area del Círculo </string>
    <string name="elresul">El resultado es: </string>
    <string-array name="opciones1">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/opcion</item>
    </string-array>
    <string-array name="opciones2">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string-array name="opciones3">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
</resources>
